feat: update to conversational store

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ STRIPE_WEBHOOK_SECRET=
 STRIPE_CURRENCY=usd
 ENABLE_STRIPE_TAX=
 
+# Optional: add ElevenLabs info to create a conversational AI concierge agent
+ELEVENLABS_API_KEY=
+NEXT_PUBLIC_AGENT_ID=
+
+SECRET=your_generated_secret_here
+
 DOCKER=
 
 NEXT_PUBLIC_LANGUAGE=en-US
