--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"clsx": "2.1.1",
 		"cmdk": "1.0.4",
 		"commerce-kit": "0.0.40",
+		"geist": "1.3.1",
 		"intl-messageformat": "10.7.15",
 		"jose": "6.0.6",
 		"lucide-react": "0.475.0",
